# greenit-backend

./: .coverage  .dockerignore  .env.nginx  .flake8  .gitignore  .project  Dockerfile  README.md  asdf  beta-deploy.sh  db.json  db.sqlite3  docker-compose.beta.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-deploy-beta.sh  docker-deploy-prod.sh  entrypoint.sh  init-letsencrypt.sh  manage.py  package-lock.json  prod-deploy.sh  pyproject.toml  requirements.txt  runqa.sh
2021-12-21-daily/: greenit.tar
comment/: admin.py  apps.py  models.py  mutation.py  schema.py  type.py
fflags/: admin.py  apps.py  models.py  schema.py
greenit/: asgi.py  sample.env  schema.py  settings.py  urls.py  wsgi.py
ingredient/: admin.py  models.py  mutations.py  schema.py  tests.py  type.py
ingredients/: models.py
newsletter/: admin.py  models.py  mutations.py  schema.py
nginx/: custom.conf  nginx.beta.conf  nginx.conf  nginx.dev.conf  user_conf.d
order/: models.py  mutation.py  schema.py  type.py
payment/: schema.py
populate/: create-file-populate.sh  ingredient-populate.json  ingredientAmount-populate.json  recipe-populate.json  recipeTags-populate.json  tag-populate.json  tagCategory-populate.json  utensil-populate.json
recipe/: admin.py  filter.py  models.py  mutations.py  schema.py  tests.py  type.py
recipes/: models.py
scripts/: stripe_seeder.py  testpay.py
substance/: admin.py  apps.py  models.py  schema.py  type.py
tag/: admin.py  models.py  mutations.py  schema.py  tests.py  type.py
translation/: admin.py  models.py  schema.py  (+2 more)
(+188 files in other folders)
