[tool.poetry]
name = "greenit-backend"
version = "1.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.17"
chardet = "^4.0.0"
django-admin-json-editor = "^0.2.3"
django-anymail = "^8.4"
django-cors-headers = "^3.10.0"
django-debug-toolbar = "^3.2.2"
django-environ = "^0.8.1"
django-graphql-auth = "^0.3.16"
django-storages = "^1.12.3"
graphene-file-upload = "^1.3.0"
gunicorn = "^20.1.0"
python-decouple = "^3.5"
python-dotenv = "^0.19.2"
sentry-sdk = "^1.5.0"
stripe = "^2.76.0"
Django = "^3.2.15"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
ipdb = "^0.13.9"
black = "^20.8b1"
coverage = "^6.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
